wrong width setting fixed

--- a/client/src/style/ResultsView.css
+++ b/client/src/style/ResultsView.css
@@ -238,6 +238,7 @@
   0% { opacity:0; }
   100% { opacity:100%; }
 }
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
   .help-tip2{
     display: none;
@@ -257,10 +258,5 @@
   }
   .header{
     display:block;
-  }
-}
-@media only screen and (min-device-width: 300px) and (max-device-width: 349px) {
-  .top-bar input{
-    width: 50%;
   }
 }
